# PySide6WebsocketSlave

./: README.md  pyproject.toml  websocket_settings.json
gui/: gui.py
helpers/: get_websocket_server_settings.py
wserver/: wserver.py
wserver/static/css/: change_page.css
wserver/templates/: change_page.html
